--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
       <div class="answersListBox">
         <h3>Previous answers:</h3>
         <ul id="answerList" class="answerList">
-
         </ul>
       </div>
+        <button onclick="exit()" class="exitButton">EXIT</button>
     </div>
     <div class="login page" id="loginpage">
       <div class="form">
